changes to file2

--- a/file2.html
+++ b/file2.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   
-    <title>File1</title>
+
+    <title>File2
+
+    </title>
 </head>
 <body>
-
-    <h1>  File1</h1>
     
+    <h1>file2</h1>
 </body>
-</html> 
+</html>
