--- a/index.html
+++ b/index.html
@@ -6,7 +6,40 @@
 </head>
 <body>
 
-    <h1>  File1</h1>
+    <div class="header">
+        <h1>Techy Nervous</h1>
+        <p>Learning Paradise</p>
+     </div>
+ 
+     <div class="hero">
+ <img src="./div.jpg" alt="child image">
+   </div>
+ 
+   <div class="coding">
+ <h3>About coding</h3>
+ <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam rem facilis non cupiditate explicabo voluptates porro. Eius nulla cumque possimus voluptate. Harum amet modi consectetur libero, facere repellendus voluptatum. Eius assumenda labore fuga, cum cumque nulla ullam quaerat voluptas quas quam vitae ducimus officia laudantium aliquid facere tempora qui voluptates.
+ </p>
+   </div>
+ 
+ 
+ 
+   <div class="design">
+ <h3>About designing</h3>
+ <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae eius a iusto quia, tempora impedit tempore necessitatibus id nostrum perspiciatis, numquam sit omnis incidunt modi quam maiores iure est, nesciunt minima corporis atque sapiente illum. Culpa velit porro eligendi deleniti ad inventore voluptate ducimus deserunt aspernatur, maxime eum repellendus vero!
+ </p>
+ 
+   </div>
+ 
+   <div class="develo">
+ <h3>About DEvelopment</h3>
+ <p>
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus maiores natus eligendi unde voluptatibus libero dolore, mollitia, amet quis hic soluta odio officia repellat officiis sapiente cupiditate laboriosam. Suscipit ad repellendus qui excepturi iusto! Dicta eligendi reiciendis veritatis eaque, labore rem maiores vero ipsum molestiae accusantium excepturi vitae. Eaque, maiores.
+ </p>
+ </div>
+ 
+ <div class="footer">
+ <p>Free copy Right</p>
+ </div>
     
 </body>
 </html> 
