--- a/file2.html
+++ b/file2.html
@@ -11,6 +11,9 @@
     <h1>file2</h1>
 
     <h2>my file</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis commodi incidunt repellendus quidem voluptatum, aperiam iure molestias. Quae aspernatur facere nisi vitae nulla qui, et fugit sunt excepturi, temporibus hic.git status
+        
+    </p>
 
     <p>This is my file</p>
 </body>
